2013-05-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (do_arc):  The new routine draw_clip_polygon() is not
	working correctly here.  Revert to the previous explicit loop over
	arc segments using draw_clip_line();

	* src/term.c (term_start_multiplot) docs/gnuplot.doc:
	New command "set multiplot next|previous" skips forward or back one
	position in a multiplot autolayout grid.  I.e. "next" leaves a blank
	area instead of a plot, while "prev" would overwrite the plot that
	was just drawn.

2013-04-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/save.c (save_variables__sub):  Ignore datablocks when saving
	variables to file.

2013-04-27  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/fit.c src/setshow.h src/show.c:  Extend 'update' so that it
	does no longer require the parameter file to already exist.  Docs
	implied this feature since before the start of the CVS.  'fit' now
	saves the names of parameters and independent variables and this
	info is used by 'update' to create a new parameter file if it does
	not exist yet.  Bug #1156.

	* src/fit.c (backup_file):  Backup files will not get overwritten.
	Add error message for that case.

	* src/util.c|h (existfile) src/win/winmain.c:  New routine.

2013-04-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_tokenise): Because the individual lines of an
	internal data block ("here data") end in \n rather than \0, the test
	for termination of the final field on the line could fail.  This led
	to attempted memory access beyond the end of the block.

	* src/datafile.c (df_tokenise check_missing):  Treat empty fields in
	a csv file as "missing" rather than "bad".  This allows generating
	stacked histogram plots from a csv spreadsheet of sparse data.

	* src/datafile.c (df_tokenise):  Since we now test for an unwanted \n
	at the end of a line of data, we might as well test for \r also.
	That means DOS format *.csv files can be read without conversion.
